Collapse and bottom navigation

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <script
-    src="https://code.jquery.com/jquery-3.1.1.js"
-    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-    crossorigin="anonymous"></script>
+    <script src="bower_components/react/react.js"></script>
+    <script src="bower_components/react-height/build/react-height.js"></script>
+    <script src="bower_components/react-motion/build/react-motion.js"></script>
+    <script src="bower_components/react-collapse/build/react-collapse.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
